Export RadialMenu's CentralItem in its own Control

--- a/RadialMenu/RadialMenu.csproj
+++ b/RadialMenu/RadialMenu.csproj
@@ -47,6 +47,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\RadialMenuCentralItem.cs" />
     <Compile Include="Converters\IndexAndCountToAngleDelta.cs" />
     <Compile Include="Converters\IndexAndCountToRotation.cs" />
     <Compile Include="Converters\IndexCountAndSizeToPosition.cs" />
@@ -55,6 +56,10 @@
     <Compile Include="Controls\PieShape.cs" />
     <Compile Include="Controls\RadialMenuItem.cs" />
     <Page Include="Themes\PieShape.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Themes\RadialMenuCentralItem.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
